force-app/main/default/objects/CG_Setting_Items__c.object
<CustomObject>
    <fields>
        <fullName>CG_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CG Setting</label>
        <referenceTo>CG_Setting__c</referenceTo>
        <relationshipLabel>CG Setting Items</relationshipLabel>
        <relationshipName>CG_Setting_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>CG Setting Items</label>
    <nameField>
        <displayFormat>CGS-{0000}</displayFormat>
        <label>CG Setting Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>